[project]
name = "competitive-programming"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "online-judge-tools>=11.5.1",
    "online-judge-template-generator>=4.8.1",
    "setuptools>=69.1.0",
    "numpy==1.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
